style: Refine sidebar color variables for improved visual consistency. Update sidebar styles to enhance aesthetics and ensure better alignment with design standards. Refactor authentication redirection logic to only trigger on initial load, improving user experience during navigation.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,6 @@
     --chart-4: 37.6923 92.1260% 50.1961%;
     --chart-5: 160.1183 84.0796% 39.4118%;
     --sidebar: 0 0% 98.8235%;
-    --sidebar-background: 0 0% 98.8235%;
     --sidebar-foreground: 0 0% 43.9216%;
     --sidebar-primary: 151.3274 66.8639% 66.8627%;
     --sidebar-primary-foreground: 153.3333 13.0435% 13.5294%;
@@ -78,14 +77,13 @@
     --chart-3: 255.1351 91.7355% 76.2745%;
     --chart-4: 43.2558 96.4126% 56.2745%;
     --chart-5: 172.4551 66.0079% 50.3922%;
-    --sidebar: 0 0% 3%;
-    --sidebar-background: 0 0% 3%;
-    --sidebar-foreground: 0 0% 80%;
+    --sidebar: 0 0% 7.0588%;
+    --sidebar-foreground: 0 0% 53.7255%;
     --sidebar-primary: 154.8980 100.0000% 19.2157%;
     --sidebar-primary-foreground: 152.7273 19.2982% 88.8235%;
-    --sidebar-accent: 0 0% 25%;
+    --sidebar-accent: 0 0% 19.2157%;
     --sidebar-accent-foreground: 0 0% 98.0392%;
-    --sidebar-border: 0 0% 15%;
+    --sidebar-border: 0 0% 16.0784%;
     --sidebar-ring: 141.8919 69.1589% 58.0392%;
     --font-sans: Outfit, sans-serif;
     --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
